# flappy-bird

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  settings.json
docs/: Doxyfile.in
include/: background.h  bird.h  game.h  pipe.h  pipe_spawner.h  score_board.h
src/: CMakeLists.txt  background.cpp  bird.cpp  game.cpp  pipe.cpp  pipe_spawner.cpp  score_board.cpp
